--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
   	  <div class="two-thirds column">
         <div class="logosistema">
-        <img src="https://ntihgwa.github.io/escalamorse/img/morse-img.png">
+        <img src="https://misael-mra.github.io/escalamorse-calculadora/img/morse-img.png">
         </div>
         <div id="progress_bar"></div>
   	  	<form class="questions_box">
