--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Escala Morse</title>
   <meta name="description" content="Morse">
-  <meta name="author" content="NTI-HGWA">
+  <meta name="author" content="misael-mra">
   <link rel="shortcut icon" href="https://ntihgwa.github.io/escalamorse/img/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://ntihgwa.github.io/escalamorse/style.css">
 
